# adventofcode

./: .gitignore  LICENSE  README.md  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml
docs/: requirements.txt
docs/source/: 2021.rst  conf.py  index.rst
docs/source/2021/: day_01.rst  day_02.rst  day_03.rst  day_04.rst  day_05.rst  day_06.rst  day_07.rst  day_08.rst
src/adventofcode/year_2021/day_2021_01/: day01.py  readable.py  short.py
src/adventofcode/year_2021/day_2021_02/: day02.py  day02_simple.py  readable.py
src/adventofcode/year_2021/day_2021_03/: readable.py  short.py
src/adventofcode/year_2021/day_2021_04/: readable.py
src/adventofcode/year_2021/day_2021_05/: readable.py
src/adventofcode/year_2021/day_2021_06/: readable.py
src/adventofcode/year_2021/day_2021_07/: readable.py
src/adventofcode/year_2021/day_2021_08/: readable.py
src/adventofcode/year_2021/day_2021_09/: readable.py
src/adventofcode/year_2021/day_2021_10/: readable.py
src/adventofcode/year_2021/day_2021_11/: readable.py
src/adventofcode/year_2021/day_2021_12/: readable.py
src/adventofcode/year_2021/day_2021_13/: readable.py
src/adventofcode/year_2021/day_2021_14/: readable.py
tests/year_2021/: test_2021_day_07.py  test_day_2021_01.py  test_day_2021_02.py  test_day_2021_03.py  test_day_2021_04.py  test_day_2021_05.py  test_day_2021_06.py  test_day_2021_08.py  test_day_2021_09.py  test_day_2021_10.py  test_day_2021_11.py  test_day_2021_12.py  test_day_2021_13.py  test_day_2021_14.py  test_day_2021_15.py
(+1 files in other folders)
